[package]
name = "wifi_tank"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = "0.6.1"
embassy-net = {version = "0.4.0", features = ["udp", "tcp", "proto-ipv4", "dns", "dhcpv4-hostname", "medium-ip"]}
embassy-time = "0.3.2"
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = ["esp32"] }
esp-hal-embassy = { version = "0.4.0", features = [
    "esp32",
    "log",
    "integrated-timers",
] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.10.1", features = [
    "esp32",
    "wifi",
    "wifi-default",
    "async",
    "embassy-net",
    "log",
    "esp-alloc",
] }
heapless = "0.8.0"
log = { version = "0.4.22", features = [] } # "release_max_level_off"
static_cell = "2.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
